--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "git": "git add . && git commit -m '0' && git push"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.5.1",
